--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,5 +5,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript', src='/javascripts/jquery.min.js')
     script(type='text/javascript', src='/javascripts/front.js')
-  body
+  body(data-auth=auth ? 'true' : 'false')
     block content
