Примерно похоже на рабочий вариант
Сделал logout.
Подключил bootstrap 3 и сделал оформление.
Вместо реальных значений пока используется рандом, для демонстрации.
Подгружается информация о юзере, аватарка.
Вдобавок к лайкам, то же самое для комментов.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,16 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+.percentage {
+    font-size: 22px;
+    line-height: 26px;
+    text-align: center;
 }
-
-a {
-  color: #00B7FF;
+.followers-count, .strangers-count {
+    font-size: 14px;
+}
+.total-count {
+    font-size: 26px;
+    font-weight: bold;
+    line-height: 1.2;
+}
+.thumbnail {
+    margin-bottom: 0;
 }
