--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,8 +11,16 @@ html
     meta(name='theme-color', content='#ffffff')
 
     title= title
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript', src='/javascripts/jquery.min.js')
     script(type='text/javascript', src='/javascripts/front.js')
+
   body(data-auth=auth ? 'true' : 'false')
-    block content
+    block navbar
+
+    .container
+      .row
+        .col-lg-12.content
+          block content
