--- a/views/index.jade
+++ b/views/index.jade
@@ -16,10 +16,8 @@ block navbar
             a(href='/logout') Exit
 
 block content
-  .text-center
-    if auth
-      #loading Loading data from Instagram, please wait a second...
-    else
+  unless auth
+    .text-center
       h1= title
       br
       a.btn.btn-lg.btn-info(href=instagramLoginUrl) Login
