Переделал вёрстку постов, поменял настройки бутстрапа
Сделал xs = 480px, чтобы только на телефонах показывать картинки сверху. В остальных случаях они нормально сбоку стоят.
Повыключал некоторые ненужные элементы бутстрапа, типа иконок.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,9 +7,13 @@
     font-size: 14px;
 }
 .total-count {
-    font-size: 26px;
-    font-weight: bold;
-    line-height: 1.2;
+    font-size: 18px;
+    line-height: 1.5;
+    text-align: right;
+}
+.total-count > strong {
+    font-size: 110%;
+    margin-left: .2em;
 }
 .thumbnail {
     margin-bottom: 0;
