--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,7 +20,7 @@ html
   body(data-auth=auth ? 'true' : 'false')
     block navbar
 
-    .container
+    .container-fluid
       .row
         .col-xs-12.content
           block content
