Главная менюшка теперь сворачивается, переделал её
Количество подписчиков на мелком экране показывается в короткой форме — 12k.
Добавил сообщение об ошибке, если не получается загрузить посты.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,6 +15,7 @@ html
     link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript', src='/javascripts/jquery.min.js')
+    script(type='text/javascript', src='/javascripts/bootstrap.min.js')
     script(type='text/javascript', src='/javascripts/front.js')
 
   body(data-auth=auth ? 'true' : 'false')
