--- a/views/index.jade
+++ b/views/index.jade
@@ -4,14 +4,29 @@ block navbar
   if auth
     nav.navbar.navbar-default
       .container-fluid
-        a.navbar-brand(href='')
-          img.img-circle.pull-left(src=user.profile_picture, alt=user.username, width='20', height='20')
-          | &nbsp;#{user.username}
-        ul.nav.navbar-nav
-          li: a(href=''): strong #{user.counts.followed_by} followers
-        ul.nav.navbar-nav.navbar-right
-          li: a(href='/privacy-policy') Privacy Policy
-          li: a(href='/logout') Exit
+        .navbar-header
+          button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#nav-collapsing', aria-expanded='false')
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='/')
+            img(src='fa.png', width='20', height='20')
+          a.navbar-brand(href='#')
+            img.img-circle.pull-left(src=user.profile_picture, alt=user.username, width='20', height='20')
+            | &nbsp;
+            =user.username
+            | &nbsp;
+            if user.counts.followed_by > 0
+              span.badge.hidden-xs
+                =user.counts.followed_by
+              span.badge.visible-xs-inline
+                =user.counts.followed_by_human
+
+        #nav-collapsing.collapse.navbar-collapse
+          ul.nav.navbar-nav.navbar-right
+            li: a(href='/privacy-policy') Privacy Policy
+            li: a(href='/logout') Exit
+
 
 block content
   unless auth
